--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ body {
   background-color: black;
   font-family: "BebaNeue";
 }
+
+/* PROJECT CARD  */
+
+.project-title {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0 5%;
+}
+
+.project-card-container {
+  transition: transform 0.3s;
+}
+
+.project-card-container:hover {
+  transform: scale(1.1);
+}
